# llm-rag-from-yt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  Makefile  README.md  alert_rules.yml  alertmanager.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
artifacts/: Pipeline Demo.ipynb  Pipeline_Demo.py
artifacts/testing/: .env  TRANSCRIPTION_FIX_NOTES.md  config.yml  fixed_transcription.txt  persistent_rag_demo.py  rag_pipeline_demo.py  real_transcribe.py  simple_chroma_demo.py  simple_project_test.py  simple_rag_demo.py  simple_rag_demo_test.py  simple_transcription_result.txt  test_project_transcriber.py  transcriber_fix.py
artifacts/testing/data/audio/: transcript.txt
artifacts/testing/data/chroma_db/: chroma.sqlite3
artifacts/testing_backup/: .env  persistent_rag_demo_backup.py  real_transcribe_backup.py  simple_chroma_demo_backup.py  simple_rag_demo_backup.py  transcriber_fix_backup.py
docs/: .PROMPTS-LOG.md  API.md  CLAUDE-curr-status.md  CLAUDE.local.md  CLAUDE.md  DAGSTER-PIPELINE.md  LOGGING.md  PHILOSOPHICAL-RAG-TEST-PLAN.md  README.md  TELEGRAM-BOT.md  TEST-REPORT.md  TODO.md
examples/: logging_demo.py
grafana/provisioning/dashboards/: llm-rag-dashboard.json
scripts/: README.md  dagster_dev.py  manual_test_api.py  telegram_bot_runner.py  test_full_pipeline.py  test_philosophical_demo.py  test_philosophical_rag.py  test_simple_rag.py  update_imports.py
src/llm_rag_yt/: __init__.py  pipeline.py  utils.py
src/llm_rag_yt/_common/: __init__.py  utils.py
src/llm_rag_yt/_common/config/: settings.py
src/llm_rag_yt/_common/logging/: __init__.py  logger.py  telegram_handler.py
src/llm_rag_yt/api/: models.py  server.py
src/llm_rag_yt/audio/: downloader.py  transcriber.py
src/llm_rag_yt/cli/: dagster_commands.py  main.py  telegram_bot.py
src/llm_rag_yt/config/: settings.py
src/llm_rag_yt/dagster/: assets.py  definitions.py  jobs.py  sensors.py
src/llm_rag_yt/embeddings/: encoder.py
src/llm_rag_yt/evaluation/: __init__.py  llm_evaluator.py  retrieval_evaluator.py
src/llm_rag_yt/ingestion/: __init__.py  automated_pipeline.py
src/llm_rag_yt/monitoring/: __init__.py  dashboard.py  feedback_collector.py
src/llm_rag_yt/rag/: query_engine.py
src/llm_rag_yt/search/: __init__.py  hybrid_search.py  query_rewriter.py
src/llm_rag_yt/telegram/: bot.py  database.py  progress_tracker.py
src/llm_rag_yt/text/: __init__.py  processor.py
src/llm_rag_yt/ui/: __init__.py  gradio_app.py
src/llm_rag_yt/vectorstore/: __init__.py  chroma.py
src/user_testing/: __init__.py  config.py  rag_demo.py  test_enhanced_demo.py
tests/: __init__.py  test_api.py  test_config.py  test_dagster_pipeline.py  test_evaluation.py  test_ingestion.py  test_monitoring.py  test_search.py  test_telegram_bot.py  test_text_processor.py
